layout menu, páginas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,76 +1,5 @@
-<header class="header" id="site-header">
 
-	<div class="page-title">
-		<div class="control-block">
-			<div class="author-page author vcard inline-items">
-				<div class="author-thumb">
-					<img alt="Logo" style="border-radius: initial;width:75px;position:relative;top: 20px;margin-right:10px" src="assets/img/logo_app.png" class="avatar">
-				</div>
-				<a href="#" class="author-name fn">
-					<div class="author-title">
-						APLICATIVO | PREFEITURA DE ARARAS
-					</div>
-				</a>
-			</div>
-		</div>
-	</div>
+<app-header></app-header>
 
-	<div class="header-content-wrapper">
-		<div class="control-block">
-			<div class="control-icon more has-items">
-				<form action="https://goo.gl/qGW3eT" >
-					<button type="submit" class="btn btn-primary btn-lg full-width">Baixe o aplicativo<div class="ripple-container"></div></button>
-				</form>
-			</div>
-		</div>
-	</div>
-
-</header>
-<div class="header-spacer"></div>
-
-<div class="container">
-	<div class="row">
-		<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-			<div class="ui-block">
-				<div class="top-header top-header-favorit">
-					<div class="top-header-thumb">
-						<img src="assets/img/araras.jpg" alt="nature">
-						<div class="top-header-author">
-							<div class="author-thumb">
-								<img src="assets/img/brasao.jpg" alt="author">
-							</div>
-							<div class="author-content">
-								<a href="#" class="h3 author-name">Prefeitura de Araras</a>
-								<div class="country">Rua Pedro Álvares Cabral, 83  | (019) 3547-3000</div>
-							</div>
-						</div>
-					</div>
-					<div class="profile-section">
-						
-
-						<!-- <app-search></app-search> -->
-						
-
-						<div class="control-block-button">
-							<a href="https://goo.gl/qGW3eT" target="_blank" class="btn btn-control bg-primary">
-								<svg style="width:20px;height:20px" class="olymp-plus-icon">
-									<use xlink:href="assets/icons/icons.svg#olymp-plus-icon"></use>
-								</svg>
-							</a>
-
-							<a href="https://goo.gl/aubvUe" target="_blank" class="btn btn-control bg-purple">
-								<svg style="width:20px;height:20px" class="olymp-computer-icon">
-									<use xlink:href="assets/icons/icons.svg#olymp-computer-icon"></use>
-								</svg>
-							</a>
-
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
-<app-feed></app-feed>
+<router-outlet></router-outlet>
 
