acertos menu e banner

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,6 @@
     <div class="control-block">
       <div class="author-page author vcard inline-items">
         <a href="#" class="author-name fn">
-
           <div class="author-title">COVID-19 INFO</div>
           <div style="font-size: 10px;color:#fd7e62">Informações de Araras e Região</div>
         </a>
@@ -13,8 +12,8 @@
   </div>
 
   <div class="header-content-wrapper">
-    <a routerLink="noticias" class="link-find-friend">ÚLTIMAS NOTÍCIAS</a>
-    <div class="control-block" style="padding: 25px 20px;">
+    <a routerLink="noticias" class="link-find-friend span_menu">ÚLTIMAS NOTÍCIAS</a>
+    <div class="control-block control-block-casos">
       <!-- <div class="control-icon more has-items">
         <span style="color:#fff">TEMPO REAL</span>
         <div class="more-dropdown more-with-triangle triangle-top-center">
@@ -44,7 +43,7 @@
       </div> -->
       <div class="author-page author vcard inline-items more">
         <div class="author-thumb">
-          <span style="color:#fff">TEMPO REAL</span>
+          <span style="color:#fff" class="span_menu">TEMPO REAL</span>
           <div class="more-dropdown more-with-triangle">
             <div class="mCustomScrollbar ps ps--theme_default ps--active-y" data-mcs-theme="dark"
               data-ps-id="9b19357b-3ccd-a60f-fcdf-fadc563ab76e">
@@ -76,8 +75,8 @@
         </div>
       </div>
     </div>
-    <a routerLink="links" class="link-find-friend">LINKS ÚTEIS</a>
-    <a routerLink="colaboradores" class="link-find-friend">COLABORADORES</a>
+    <a routerLink="links" class="link-find-friend span_menu">LINKS ÚTEIS</a>
+    <a routerLink="colaboradores" class="link-find-friend span_menu">COLABORADORES</a>
   </div>
 
   <!-- 
