--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
     <div class="control-block">
       <div class="author-page author vcard inline-items">
         <a href="#" class="author-name fn">
-          <div class="author-title">COVID-19 INFO</div>
+          <div class="author-title">CORONA VÍRUS <small>(COVID-19)</small></div>
           <div style="font-size: 10px;color:#fd7e62">Informações de Araras e Região</div>
         </a>
       </div>
@@ -162,7 +162,7 @@
 								<img src="assets/img/brasao.jpg" alt="author">
 							</div> -->
               <div class="author-content">
-                <a href="#" class="h3 author-name">COVID-19 INFO</a>
+                <a href="#" class="h3 author-name">CORONA VÍRUS <small>(COVID-19)</small></a>
                 <div class="country">INFORMAÇÕES DE ARARAS E REGIÃO</div>
               </div>
             </div>
