painel de casos em araras, ajustes layout

--- a/src/app/contributors/contributors.component.html
+++ b/src/app/contributors/contributors.component.html
@@ -6,13 +6,13 @@
           <div class="friend-item friend-groups">
             <div class="friend-item-content">
               <div class="friend-avatar">
-                <a href="#" target="_blank">
+                <a href="{{colab.url}}" target="_blank">
                   <div class="author-thumb">
                     <img src="assets/img/{{colab.avatar}}" alt="{{colab.nome}}" width="120">
                   </div>
                 </a>
                 <div class="author-content">
-                  <a href="#" class="h5 author-name">{{colab.nome}}</a>
+                  <a href="{{colab.url}}" target="_blank" class="h5 author-name">{{colab.nome}}</a>
                 </div>
               </div>  
             </div>
