--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -53,7 +53,7 @@
 
               <ul class="account-settings">
                 <li>
-                  <a href="https://noticiasdeararas.com.br" target="_blank">
+                  <a routerLink="painel">
                     <svg class="olymp-check-icon">
                       <use xlink:href="svg-icons/sprites/icons.svg#olymp-check-icon"></use>
                     </svg>
@@ -129,13 +129,13 @@
         </div>
         <ul class="account-settings">
           <li>
-            <a href="https://noticiasdeararas.com.br" target="_blank">
-              <span>Painel em ARARAS</span>
+            <a routerLink="painel">
+              <span>Casos em ARARAS</span>
             </a>
           </li>
           <li>
             <a href="https://bing.com/covid" target="_blank">
-              <span>Painel no MUNDO</span>
+              <span>Casos no MUNDO</span>
             </a>
           </li>
         </ul>
