--- a/src/assets/css/theme-styles.css
+++ b/src/assets/css/theme-styles.css
@@ -1231,7 +1231,11 @@
     left: 0;
     display: block;
     position: absolute;
-    z-index: -1; }
+    z-index: -1;
+    -webkit-box-shadow: 0px 10px 5px 0px rgba(163,163,163,1);
+    -moz-box-shadow: 0px 10px 5px 0px rgba(163,163,163,1);
+    box-shadow: 0px 10px 5px 0px rgba(163,163,163,1);
+  }
     .tab-content-responsive .ps > .ps__scrollbar-y-rail, .tab-content-responsive .ps:hover > .ps__scrollbar-y-rail {
       display: none; }
   .view-all {
