--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -5,7 +5,7 @@
 			<div class="ui-block">
 				<div class="ui-block-content">
 						<div class="row">
-							<div class="col col-sm-12">
+							<div class="col col-sm-12 text-center">
                 <img src="https://araras.sp.gov.br/coronavirus/images/fotoSecom/fotoDados_Secom.jpg" alt="Casos Corona Vírus em Araras">
               </div>
 						</div>
