--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -4,11 +4,11 @@
 		<div class="col col-xl-10 col-lg-10 col-md-12 col-sm-12 col-12">
 			<div class="ui-block">
 				<div class="ui-block-content">
-						<div class="row">
-							<div class="col col-sm-12 text-center">
-                <img src="https://araras.sp.gov.br/coronavirus/images/fotoSecom/fotoDados_Secom.jpg" alt="Casos Corona Vírus em Araras">
-              </div>
-						</div>
+					<div class="row">
+						<div class="col col-sm-12 text-center" style="padding:0px">
+                			<img style="width:100%" src="https://araras.sp.gov.br/coronavirus/images/fotoSecom/fotoDados_Secom.jpg" alt="Casos Corona Vírus em Araras">
+              			</div>
+					</div>
 				</div>
 			</div>
 		</div>
