--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -51,20 +51,14 @@
                 <h6 class="title">Siga os casos em TEMPO REAL</h6>
               </div>
 
-              <ul class="account-settings">
+              <ul class="account-settings" style="text-align: center;">
                 <li>
                   <a routerLink="painel">
-                    <svg class="olymp-check-icon">
-                      <use xlink:href="svg-icons/sprites/icons.svg#olymp-check-icon"></use>
-                    </svg>
                     <span>Painel em ARARAS</span>
                   </a>
                 </li>
                 <li>
                   <a href="https://bing.com/covid" target="_blank">
-                    <svg class="olymp-check-icon">
-                      <use xlink:href="svg-icons/sprites/icons.svg#olymp-check-icon"></use>
-                    </svg>
                     <span>Painel no MUNDO</span>
                   </a>
                 </li>
